# HPC

./: .gitignore  CMakeLists.txt  FullAlgo_parallel.c  basic_parallel.c  basic_seq.c  measurements.txt  optimize_me_parallel.c  optimize_seq.c  run_sample.sh  sample.c  seam_parallel.c  triangle_parallel.c
DN1/: CMakeLists.txt  basic_parallel.c  optimize_seq.c  run_sample.sh  seam_parallel.c
DN2/: CMakeLists.txt  compute_histogram.cu  cumulative_histogram.cu  histogram_norm_seq.c  historgram_norm_cuda.cu  main.cpp  run.sh
DN2/include/: compute_histogram.h  config.h  cuda_functions.cuh  cumulative_histogram.h  histogram_norm.h  histogram_norm_cuda.h  histogram_norm_seq.h
DN3/amd-zen-hpl-2023_07_18/: README.md  RELEASE_NOTES.md  libnuma.so.1  reset-system.sh  run_hpl_mpi_only_openMPI.sh
